fix: align items in header content

--- a/app/tic_tac_toe/presentation/web/static/styles.css
+++ b/app/tic_tac_toe/presentation/web/static/styles.css
@@ -193,3 +193,10 @@ button:hover {
     color: gray;
     justify-content: left;
 }
+
+
+.header-content {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+}
